Increase max upload size to 192MB, tweak opcache, prepare docker-compose workflow

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -21,6 +21,9 @@ http {
 
     keepalive_timeout 65;
 
+    # Max body size
+    client_max_body_size 192M;
+
     # Write temporary files to /tmp so they can be created as a non-privileged user
     client_body_temp_path /tmp/client_temp;
     proxy_temp_path /tmp/proxy_temp_path;
