--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
    wp:
      depends_on:
        - db
+     volumes:
+        - ./src-compose:/var/www/html
      build: .
      ports:
        - "8888:8080"
