--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -45,7 +45,7 @@ http {
         location / {
             # First attempt to serve request as file, then
             # as directory, then fall back to index.php
-            try_files $uri $uri/ /index.php?q=$uri&$args;
+            try_files $uri $uri/ /index.php?$args;
         }
 
         # Redirect server error pages to the static page /50x.html
