Remove xml from static files, as they can be dynamically generated by WordPress

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -65,7 +65,7 @@ http {
             include fastcgi_params;
         }
 
-        location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
+        location ~* \.(jpg|jpeg|gif|png|css|js|ico)$ {
             expires 5d;
         }
 
